[HOPSWORKS-1934] Upgrade TensorFlow to 2.3 and PyTorch to 1.6

--- a/notebooks/featurestore/FeatureStoreQuickStart.ipynb
+++ b/notebooks/featurestore/FeatureStoreQuickStart.ipynb
@@ -26,37 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>13</td><td>application_1549128638243_0017</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1549128638243_0017/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1549128638243_0017_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -65,12 +37,7 @@
     "sqlContext = SQLContext(sc)\n",
     "from pyspark.sql import Row\n",
     "from hops import featurestore\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers\n",
-    "from hops import experiment\n",
-    "from tensorflow.python.keras.callbacks import TensorBoard\n",
-    "from hops import tensorboard"
+    "from hops import experiment"
    ]
   },
   {
@@ -130,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+------------------+--------+------------------+------------------+\n",
-      "|area_id|         house_age|house_id|        house_size|       house_worth|\n",
-      "+-------+------------------+--------+------------------+------------------+\n",
-      "|      1|2197.6538783413644|       0|1540.6164197194921| 936.4639471590823|\n",
-      "|      1| 4575.640957556092|       1|  291.299158164445| 3827.151581426811|\n",
-      "|      1|3056.2417991681514|       2|1051.5145743403905|22857.846837349654|\n",
-      "|      1| 12768.38793285203|       3| 944.4714646085961| 3590.890018337794|\n",
-      "|      1| 4722.828106705723|       4| 259.1621123268429|10525.711844055819|\n",
-      "+-------+------------------+--------+------------------+------------------+\n",
+      "+-------+--------+------------------+------------------+------------------+\n",
+      "|area_id|house_id|       house_worth|         house_age|        house_size|\n",
+      "+-------+--------+------------------+------------------+------------------+\n",
+      "|      1|       0|7954.6041492424665|18744.948373115192| 262.5787314631974|\n",
+      "|      1|       1|1358.0084781070925|18504.222822538602|  809.432184084531|\n",
+      "|      1|       2|11154.843104129464|  6791.12075051502|1562.9281829769877|\n",
+      "|      1|       3| 3516.765032301006| 8032.966064701901| 235.4698790067539|\n",
+      "|      1|       4| 17528.84349464171| 7575.332365371018| 530.4529032760828|\n",
+      "+-------+--------+------------------+------------------+------------------+\n",
       "only showing top 5 rows"
      ]
     }
@@ -184,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,10 +160,10 @@
      "text": [
       "root\n",
       " |-- area_id: long (nullable = true)\n",
-      " |-- house_age: double (nullable = true)\n",
       " |-- house_id: long (nullable = true)\n",
-      " |-- house_size: double (nullable = true)\n",
-      " |-- house_worth: double (nullable = true)"
+      " |-- house_worth: double (nullable = true)\n",
+      " |-- house_age: double (nullable = true)\n",
+      " |-- house_size: double (nullable = true)"
      ]
     }
    ],
@@ -213,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,11 +214,11 @@
       "+-------+-----------------+-----------------+------------------+\n",
       "|area_id|house_purchase_id|number_of_bidders|   sold_for_amount|\n",
       "+-------+-----------------+-----------------+------------------+\n",
-      "|      1|                0|                8|103136.86683870589|\n",
-      "|      1|                1|                4| 106496.0570260969|\n",
-      "|      1|                2|                5|27771.654964553803|\n",
-      "|      1|                3|                3| 195575.7653004581|\n",
-      "|      1|                4|               20| 62427.45592116985|\n",
+      "|      1|                0|                1|29395.848291318987|\n",
+      "|      1|                1|                3|16425.712634068295|\n",
+      "|      1|                2|               40|116255.52034231767|\n",
+      "|      1|                3|               14| 32392.42818851318|\n",
+      "|      1|                4|               12|  63486.6189252683|\n",
       "+-------+-----------------+-----------------+------------------+\n",
       "only showing top 5 rows"
      ]
@@ -263,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -450,14 +417,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running sql: use demo_featurestore_admin000_featurestore"
+      "Registering feature metadata...\n",
+      "Registering feature metadata... [COMPLETE]\n",
+      "Writing feature data to offline feature group (Hive)...\n",
+      "Running sql: use demo_featurestore_admin000_featurestore against offline feature store\n",
+      "Writing feature data to offline feature group (Hive)... [COMPLETE]\n",
+      "Feature group created successfully"
      ]
     }
    ],
@@ -475,14 +447,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running sql: use demo_featurestore_admin000_featurestore"
+      "Registering feature metadata...\n",
+      "Registering feature metadata... [COMPLETE]\n",
+      "Writing feature data to offline feature group (Hive)...\n",
+      "Running sql: use demo_featurestore_admin000_featurestore against offline feature store\n",
+      "Writing feature data to offline feature group (Hive)... [COMPLETE]\n",
+      "Feature group created successfully"
      ]
     }
    ],
@@ -520,15 +497,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running sql: use demo_featurestore_admin000_featurestore\n",
-      "Running sql: SELECT avg_house_age, avg_house_size, avg_house_worth, avg_num_bidders, avg_sold_for FROM houses_for_sale_featuregroup_1 JOIN houses_sold_featuregroup_1 ON houses_for_sale_featuregroup_1.`area_id`=houses_sold_featuregroup_1.`area_id`"
+      "Running sql: use demo_featurestore_admin000_featurestore against offline feature store\n",
+      "Logical query plan for getting 5 features from the featurestore created successfully\n",
+      "SQL string for the query created successfully\n",
+      "Running sql: SELECT avg_sold_for, avg_house_age, avg_house_size, avg_num_bidders, avg_house_worth FROM houses_sold_featuregroup_1 JOIN houses_for_sale_featuregroup_1 ON houses_sold_featuregroup_1.`area_id`=houses_for_sale_featuregroup_1.`area_id` against offline feature store\n",
+      "Training Dataset created successfully"
      ]
     }
    ],
@@ -561,96 +541,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NUM_EPOCHS = 30\n",
-    "BATCH_SIZE = 10\n",
-    "LEARNING_RATE = 0.001\n",
-    "SHUFFLE_BUFFER_SIZE = 10000\n",
-    "INPUT_SHAPE=4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create Tensorflow Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_tf_dataset():\n",
-    "    dataset_dir = featurestore.get_training_dataset_path(\"predict_house_sold_for_dataset\")\n",
-    "    input_files = tf.gfile.Glob(dataset_dir + \"/part-r-*\")\n",
-    "    dataset = tf.data.TFRecordDataset(input_files)\n",
-    "    tf_record_schema = featurestore.get_training_dataset_tf_record_schema(\"predict_house_sold_for_dataset\")\n",
-    "    feature_names = [\"avg_house_age\", \"avg_house_size\", \"avg_house_worth\", \"avg_num_bidders\"]\n",
-    "    label_name = \"avg_sold_for\"\n",
-    "    def decode(example_proto):\n",
-    "        example = tf.parse_single_example(example_proto, tf_record_schema)\n",
-    "        x = []\n",
-    "        for feature_name in feature_names:\n",
-    "            x.append(example[feature_name])\n",
-    "        y = [tf.cast(example[label_name], tf.float32)]\n",
-    "        return x,y\n",
-    "    dataset = dataset.map(decode).shuffle(SHUFFLE_BUFFER_SIZE).batch(BATCH_SIZE).repeat(NUM_EPOCHS)\n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_model():\n",
-    "    model = tf.keras.Sequential([\n",
-    "        layers.Dense(64, activation='relu', input_shape = (INPUT_SHAPE,), batch_size=BATCH_SIZE),\n",
-    "        layers.Dense(64, activation='relu'),\n",
-    "        layers.Dense(1)])\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Define the Train Function\n",
     "By refactoring our code into functions it makes it easier to manage and also means that we can utilize the **Experiments** service in Hopsworks."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_fn():\n",
+    "    import tensorflow as tf\n",
+    "    from hops import featurestore\n",
+    "    from hops import tensorboard\n",
+    "    \n",
+    "    NUM_EPOCHS = 30\n",
+    "    BATCH_SIZE = 10\n",
+    "    LEARNING_RATE = 0.001\n",
+    "    SHUFFLE_BUFFER_SIZE = 10000\n",
+    "    INPUT_SHAPE=4\n",
+    "    \n",
+    "    def create_tf_dataset():\n",
+    "        dataset_dir = featurestore.get_training_dataset_path(\"predict_house_sold_for_dataset\")\n",
+    "        input_files = tf.io.gfile.glob(dataset_dir + \"/part-r-*\")\n",
+    "        dataset = tf.data.TFRecordDataset(input_files)\n",
+    "        tf_record_schema = featurestore.get_training_dataset_tf_record_schema(\"predict_house_sold_for_dataset\")\n",
+    "        feature_names = [\"avg_house_age\", \"avg_house_size\", \"avg_house_worth\", \"avg_num_bidders\"]\n",
+    "        label_name = \"avg_sold_for\"\n",
+    "        def decode(example_proto):\n",
+    "            example = tf.io.parse_single_example(example_proto, tf_record_schema)\n",
+    "            x = []\n",
+    "            for feature_name in feature_names:\n",
+    "                x.append(example[feature_name])\n",
+    "            y = [tf.cast(example[label_name], tf.float32)]\n",
+    "            return x,y\n",
+    "        dataset = dataset.map(decode).shuffle(SHUFFLE_BUFFER_SIZE).batch(BATCH_SIZE).repeat(NUM_EPOCHS)\n",
+    "        return dataset\n",
     "    dataset = create_tf_dataset()\n",
+    "\n",
+    "    def create_model():\n",
+    "        model = tf.keras.Sequential([\n",
+    "            tf.keras.layers.Dense(64, activation='relu', input_shape = (INPUT_SHAPE,), batch_size=BATCH_SIZE),\n",
+    "            tf.keras.layers.Dense(64, activation='relu'),\n",
+    "            tf.keras.layers.Dense(1)])\n",
+    "        return model\n",
     "    model = create_model()\n",
-    "    model.compile(optimizer=tf.train.AdamOptimizer(LEARNING_RATE), loss='mse',  metrics=['accuracy'])\n",
-    "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
+    "    \n",
+    "    model.compile(optimizer=tf.keras.optimizers.Adam(LEARNING_RATE), loss='mse',  metrics=['accuracy'])\n",
+    "    tb_callback = tf.keras.callbacks.TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
     "                             write_graph=True, write_images=True)\n",
     "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5',\n",
+    "    callbacks.append(tf.keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5',\n",
     "                    monitor='acc', verbose=0, save_best_only=True))\n",
     "    history = model.fit(dataset, epochs=NUM_EPOCHS, steps_per_epoch = 5, callbacks=callbacks)\n",
     "    return -float(history.history[\"loss\"][-1])"
@@ -665,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +616,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "u'hdfs://10.0.2.15:8020/Projects/demo_featurestore_admin000/Experiments/application_1549128638243_0017/launcher/run.2'"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_featurestore_admin000/Experiments/application_1600264891477_0036_7', {'metric': -34666088.0, 'log': 'Experiments/application_1600264891477_0036_7/output.log'})"
      ]
     }
    ],
@@ -683,31 +625,24 @@
     "                  name=\"feature store quick start example\", \n",
     "                  local_logdir=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
