--- a/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
@@ -7,7 +7,7 @@
     "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.3.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -80,6 +80,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>24</td><td>application_1600264891477_0030</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1600264891477_0030/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1600264891477_0030_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multi_worker_mirrored_training():\n",
+    "    import sys\n",
+    "    import numpy as np\n",
+    "    import tensorflow as tf\n",
+    "    from hops import tensorboard\n",
+    "    from hops import devices\n",
+    "    model_dir = tensorboard.logdir()\n",
+    "    print('Using %s to store checkpoints.' % model_dir)\n",
+    "    # Define distribution strategy\n",
+    "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy()\n",
+    "    # Define per device batch size\n",
+    "    batch_size_per_replica = 32\n",
+    "    # Define global batch size    \n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
+    "    # Define model hyper parameters\n",
+    "    epochs=30 \n",
+    "    steps_per_epoch=5\n",
+    "    validation_steps=2          \n",
+    "    shuffle_size = batch_size * 4\n",
+    "    def input_fn():\n",
+    "      x = np.random.random((1024, 10))\n",
+    "      y = np.random.randint(2, size=(1024, 1))\n",
+    "      x = tf.cast(x, tf.float32)\n",
+    "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
+    "      dataset = dataset.repeat(500)\n",
+    "      dataset = dataset.batch(batch_size)\n",
+    "      options = tf.data.Options()\n",
+    "      options.experimental_distribute.auto_shard_policy = tf.data.experimental.AutoShardPolicy.OFF\n",
+    "      return dataset.with_options(options)\n",
+    "    with strategy.scope():\n",
+    "        # Define a Keras Model.\n",
+    "        model = tf.keras.Sequential()\n",
+    "        model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
+    "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
+    "        # Compile the model.\n",
+    "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "                      optimizer=tf.keras.optimizers.Adam(),\n",
+    "                      metrics=['accuracy']\n",
+    "                     )\n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "    ]\n",
+    "    model.fit(input_fn(), \n",
+    "        verbose=0, \n",
+    "        epochs=epochs, \n",
+    "        steps_per_epoch=steps_per_epoch,\n",
+    "        validation_data=input_fn(),\n",
+    "        validation_steps=validation_steps,      \n",
+    "        callbacks=callbacks\n",
+    "    )\n",
+    "    score =  model.evaluate(input_fn(), steps=1)\n",
+    "    metrics = {'accuracy': score[1]}\n",
+    "    return metrics    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -89,107 +179,14 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0182_2', {'accuracy': 0.375, 'log': 'Experiments/application_1594231828166_0182_2/chief_0_output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_deep_learning_admin000/Experiments/application_1600264891477_0030_1', {'accuracy': 0.4375, 'log': 'Experiments/application_1600264891477_0030_1/chief_0_output.log'})"
      ]
     }
    ],
    "source": [
-    "def multi_worker_mirrored_training():\n",
-    "\n",
-    "    import sys\n",
-    "    \n",
-    "    import numpy as np\n",
-    "    import tensorflow as tf\n",
-    "    \n",
-    "    from hops import tensorboard\n",
-    "    from hops import devices\n",
-    "\n",
-    "    model_dir = tensorboard.logdir()\n",
-    "    print('Using %s to store checkpoints.' % model_dir)\n",
-    "    \n",
-    "    # Define distribution strategy\n",
-    "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy(communication=tf.distribute.experimental.CollectiveCommunication.NCCL)\n",
-    "\n",
-    "    # Define per device batch size\n",
-    "    batch_size_per_replica = 32\n",
-    "    # Define global batch size    \n",
-    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
-    "    \n",
-    "    # Define model hyper parameters\n",
-    "    epochs=30 \n",
-    "    steps_per_epoch=5\n",
-    "    validation_steps=2          \n",
-    "    \n",
-    "    shuffle_size = batch_size * 4\n",
-    "    \n",
-    "    def input_fn():\n",
-    "      x = np.random.random((1024, 10))\n",
-    "      y = np.random.randint(2, size=(1024, 1))\n",
-    "      x = tf.cast(x, tf.float32)\n",
-    "    \n",
-    "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
-    "      dataset = dataset.repeat(500)\n",
-    "      dataset = dataset.batch(batch_size)\n",
-    "        \n",
-    "      return dataset\n",
-    "\n",
-    "\n",
-    "    with strategy.scope():\n",
-    "        # Define a Keras Model.\n",
-    "        model = tf.keras.Sequential()\n",
-    "        model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
-    "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
-    "\n",
-    "        # Compile the model.\n",
-    "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
-    "                      optimizer=tf.keras.optimizers.Adam(),\n",
-    "                      metrics=['accuracy']\n",
-    "                     )\n",
-    "        \n",
-    "    callbacks = [\n",
-    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
-    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
-    "    ]\n",
-    "    \n",
-    "    model.fit(input_fn(), \n",
-    "        verbose=0, \n",
-    "        epochs=epochs, \n",
-    "        steps_per_epoch=steps_per_epoch,\n",
-    "        validation_data=input_fn(),\n",
-    "        validation_steps=validation_steps,      \n",
-    "        callbacks=callbacks\n",
-    "    )\n",
-    "    \n",
-    "    score =  model.evaluate(input_fn(), steps=1)\n",
-    "\n",
-    "    metrics = {'accuracy': score[1]}\n",
-    "\n",
-    "    return metrics    \n",
-    "\n",
     "from hops import experiment\n",
-    "experiment.mirrored(multi_worker_mirrored_training,  name='random data model', local_logdir=True, metric_key='accuracy')"
+    "experiment.mirrored(multi_worker_mirrored_training,  name='random data model', metric_key='accuracy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
