--- a/notebooks/ml/Plotting/What_If_Tool_Notebook.ipynb
+++ b/notebooks/ml/Plotting/What_If_Tool_Notebook.ipynb
@@ -40,11 +40,11 @@
     "        columns = df.columns.values.tolist()\n",
     "    for f in columns:\n",
     "        if df[f].dtype is np.dtype(np.int64):\n",
-    "            feature_spec[f] = tf.FixedLenFeature(shape=(), dtype=tf.int64)\n",
+    "            feature_spec[f] = tf.io.FixedLenFeature(shape=(), dtype=tf.int64)\n",
     "        elif df[f].dtype is np.dtype(np.float64):\n",
-    "            feature_spec[f] = tf.FixedLenFeature(shape=(), dtype=tf.float32)\n",
+    "            feature_spec[f] = tf.io.FixedLenFeature(shape=(), dtype=tf.float32)\n",
     "        else:\n",
-    "            feature_spec[f] = tf.FixedLenFeature(shape=(), dtype=tf.string)\n",
+    "            feature_spec[f] = tf.io.FixedLenFeature(shape=(), dtype=tf.string)\n",
     "    return feature_spec\n",
     "\n",
     "# Creates simple numeric and categorical feature columns from a feature spec and a\n",
@@ -80,7 +80,7 @@
     "\n",
     "# Parses Tf.Example protos into features for the input function.\n",
     "def parse_tf_example(example_proto, label, feature_spec):\n",
-    "    parsed_features = tf.parse_example(serialized=example_proto, features=feature_spec)\n",
+    "    parsed_features = tf.io.parse_example(serialized=example_proto, features=feature_spec)\n",
     "    target = parsed_features.pop(label)\n",
     "    return parsed_features, target\n",
     "\n",
@@ -497,151 +497,61 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /tmp/tmpvktn_lj8\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmpvktn_lj8', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /tmp/tmphg54156d\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmphg54156d', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
       "graph_options {\n",
       "  rewrite_options {\n",
       "    meta_optimizer_iterations: ONE\n",
       "  }\n",
       "}\n",
-      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7fd3e8a0b780>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': ClusterSpec({}), '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/autograph/converters/directives.py:119: The name tf.parse_example is deprecated. Please use tf.io.parse_example instead.\n",
-      "\n",
       "INFO:tensorflow:Calling model_fn.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/feature_column/feature_column_v2.py:305: Layer.add_variable (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/tensorflow_estimator/python/estimator/canned/linear.py:1481: Layer.add_variable (from tensorflow.python.keras.engine.base_layer_v1) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use `layer.add_weight` method instead.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/tensorflow/python/keras/optimizer_v2/ftrl.py:112: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/feature_column/feature_column_v2.py:4271: IndicatorColumn._variable_shape (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/feature_column/feature_column_v2.py:4326: VocabularyListCategoricalColumn._num_buckets (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "The old _FeatureColumn APIs are being deprecated. Please use the new FeatureColumn APIs instead.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_estimator/python/estimator/canned/linear.py:308: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.cast` instead.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/anaconda/envs/python36/lib/python3.6/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
       "INFO:tensorflow:Graph was finalized.\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 0 into /tmp/tmpvktn_lj8/model.ckpt.\n",
-      "INFO:tensorflow:loss = 44.36142, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 106.618\n",
-      "INFO:tensorflow:loss = 3151.367, step = 101 (0.939 sec)\n",
-      "INFO:tensorflow:global_step/sec: 130.328\n",
-      "INFO:tensorflow:loss = 67.29275, step = 201 (0.767 sec)\n",
-      "INFO:tensorflow:global_step/sec: 125.163\n",
-      "INFO:tensorflow:loss = 48.956707, step = 301 (0.799 sec)\n",
-      "INFO:tensorflow:global_step/sec: 127.613\n",
-      "INFO:tensorflow:loss = 252.13242, step = 401 (0.784 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.385\n",
-      "INFO:tensorflow:loss = 227.39282, step = 501 (0.810 sec)\n",
-      "INFO:tensorflow:global_step/sec: 122.477\n",
-      "INFO:tensorflow:loss = 310.89493, step = 601 (0.818 sec)\n",
-      "INFO:tensorflow:global_step/sec: 124.47\n",
-      "INFO:tensorflow:loss = 39.658997, step = 701 (0.802 sec)\n",
-      "INFO:tensorflow:global_step/sec: 124.886\n",
-      "INFO:tensorflow:loss = 22.65129, step = 801 (0.801 sec)\n",
-      "INFO:tensorflow:global_step/sec: 124.565\n",
-      "INFO:tensorflow:loss = 78.08089, step = 901 (0.803 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.478\n",
-      "INFO:tensorflow:loss = 61.547226, step = 1001 (0.810 sec)\n",
-      "INFO:tensorflow:global_step/sec: 129.482\n",
-      "INFO:tensorflow:loss = 62.221222, step = 1101 (0.772 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.643\n",
-      "INFO:tensorflow:loss = 24.98814, step = 1201 (0.809 sec)\n",
-      "INFO:tensorflow:global_step/sec: 118.428\n",
-      "INFO:tensorflow:loss = 31.209835, step = 1301 (0.844 sec)\n",
-      "INFO:tensorflow:global_step/sec: 128.135\n",
-      "INFO:tensorflow:loss = 51.96972, step = 1401 (0.781 sec)\n",
-      "INFO:tensorflow:global_step/sec: 126.668\n",
-      "INFO:tensorflow:loss = 37.34439, step = 1501 (0.790 sec)\n",
-      "INFO:tensorflow:global_step/sec: 132.548\n",
-      "INFO:tensorflow:loss = 22.988493, step = 1601 (0.753 sec)\n",
-      "INFO:tensorflow:global_step/sec: 125.189\n",
-      "INFO:tensorflow:loss = 608.2848, step = 1701 (0.799 sec)\n",
-      "INFO:tensorflow:global_step/sec: 128.435\n",
-      "INFO:tensorflow:loss = 19.470184, step = 1801 (0.779 sec)\n",
-      "INFO:tensorflow:global_step/sec: 121.745\n",
-      "INFO:tensorflow:loss = 31.028343, step = 1901 (0.822 sec)\n",
-      "INFO:tensorflow:global_step/sec: 129.754\n",
-      "INFO:tensorflow:loss = 88.13399, step = 2001 (0.771 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.2\n",
-      "INFO:tensorflow:loss = 23.913616, step = 2101 (0.811 sec)\n",
-      "INFO:tensorflow:global_step/sec: 129.629\n",
-      "INFO:tensorflow:loss = 34.155293, step = 2201 (0.772 sec)\n",
-      "INFO:tensorflow:global_step/sec: 118.839\n",
-      "INFO:tensorflow:loss = 32.371353, step = 2301 (0.842 sec)\n",
-      "INFO:tensorflow:global_step/sec: 124.247\n",
-      "INFO:tensorflow:loss = 22.001223, step = 2401 (0.808 sec)\n",
-      "INFO:tensorflow:global_step/sec: 113.93\n",
-      "INFO:tensorflow:loss = 220.32918, step = 2501 (0.874 sec)\n",
-      "INFO:tensorflow:global_step/sec: 124.147\n",
-      "INFO:tensorflow:loss = 24.896484, step = 2601 (0.806 sec)\n",
-      "INFO:tensorflow:global_step/sec: 129.726\n",
-      "INFO:tensorflow:loss = 26.483824, step = 2701 (0.771 sec)\n",
-      "INFO:tensorflow:global_step/sec: 120.777\n",
-      "INFO:tensorflow:loss = 166.5003, step = 2801 (0.829 sec)\n",
-      "INFO:tensorflow:global_step/sec: 120.782\n",
-      "INFO:tensorflow:loss = 16.216942, step = 2901 (0.827 sec)\n",
-      "INFO:tensorflow:global_step/sec: 122.385\n",
-      "INFO:tensorflow:loss = 122.3871, step = 3001 (0.817 sec)\n",
-      "INFO:tensorflow:global_step/sec: 116.387\n",
-      "INFO:tensorflow:loss = 78.26083, step = 3101 (0.860 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.888\n",
-      "INFO:tensorflow:loss = 45.17054, step = 3201 (0.807 sec)\n",
-      "INFO:tensorflow:global_step/sec: 130.202\n",
-      "INFO:tensorflow:loss = 52.93849, step = 3301 (0.768 sec)\n",
-      "INFO:tensorflow:global_step/sec: 129.165\n",
-      "INFO:tensorflow:loss = 50.099464, step = 3401 (0.776 sec)\n",
-      "INFO:tensorflow:global_step/sec: 134.205\n",
-      "INFO:tensorflow:loss = 30.817543, step = 3501 (0.743 sec)\n",
-      "INFO:tensorflow:global_step/sec: 125.918\n",
-      "INFO:tensorflow:loss = 21.467716, step = 3601 (0.794 sec)\n",
-      "INFO:tensorflow:global_step/sec: 121.605\n",
-      "INFO:tensorflow:loss = 10.54994, step = 3701 (0.822 sec)\n",
-      "INFO:tensorflow:global_step/sec: 110.066\n",
-      "INFO:tensorflow:loss = 16.698147, step = 3801 (0.908 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.877\n",
-      "INFO:tensorflow:loss = 22.35471, step = 3901 (0.807 sec)\n",
-      "INFO:tensorflow:global_step/sec: 125.401\n",
-      "INFO:tensorflow:loss = 27.869202, step = 4001 (0.797 sec)\n",
-      "INFO:tensorflow:global_step/sec: 134.995\n",
-      "INFO:tensorflow:loss = 34.38636, step = 4101 (0.741 sec)\n",
-      "INFO:tensorflow:global_step/sec: 118.152\n",
-      "INFO:tensorflow:loss = 41.917427, step = 4201 (0.846 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.152\n",
-      "INFO:tensorflow:loss = 243.96169, step = 4301 (0.812 sec)\n",
-      "INFO:tensorflow:global_step/sec: 109.282\n",
-      "INFO:tensorflow:loss = 35.965195, step = 4401 (0.915 sec)\n",
-      "INFO:tensorflow:global_step/sec: 123.004\n",
-      "INFO:tensorflow:loss = 18.542263, step = 4501 (0.813 sec)\n",
-      "INFO:tensorflow:global_step/sec: 122.101\n",
-      "INFO:tensorflow:loss = 32.4102, step = 4601 (0.819 sec)\n",
-      "INFO:tensorflow:global_step/sec: 117.604\n",
-      "INFO:tensorflow:loss = 15.866201, step = 4701 (0.850 sec)\n",
-      "INFO:tensorflow:global_step/sec: 129.531\n",
-      "INFO:tensorflow:loss = 18.540451, step = 4801 (0.772 sec)\n",
-      "INFO:tensorflow:global_step/sec: 120.922\n",
-      "INFO:tensorflow:loss = 36.135452, step = 4901 (0.827 sec)\n",
-      "INFO:tensorflow:Saving checkpoints for 5000 into /tmp/tmpvktn_lj8/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 29.100332.\n"
+      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 0...\n",
+      "INFO:tensorflow:Saving checkpoints for 0 into /tmp/tmphg54156d/model.ckpt.\n",
+      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 0...\n",
+      "INFO:tensorflow:loss = 0.6931472, step = 0\n",
+      "INFO:tensorflow:global_step/sec: 33.0106\n",
+      "INFO:tensorflow:loss = 1.2316809, step = 100 (3.032 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9212\n",
+      "INFO:tensorflow:loss = 2.1111045, step = 200 (2.783 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.3198\n",
+      "INFO:tensorflow:loss = 1.3279744, step = 300 (2.754 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.3992\n",
+      "INFO:tensorflow:loss = 2.732805, step = 400 (2.825 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.4937\n",
+      "INFO:tensorflow:loss = 0.6547704, step = 500 (2.899 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.1927\n",
+      "INFO:tensorflow:loss = 0.5864808, step = 600 (2.762 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.5821\n",
+      "INFO:tensorflow:loss = 0.29896152, step = 700 (2.811 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4071\n",
+      "INFO:tensorflow:loss = 2.0995965, step = 800 (2.827 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.6815\n",
+      "INFO:tensorflow:loss = 0.96475744, step = 900 (2.881 sec)\n",
+      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 1000...\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /tmp/tmphg54156d/model.ckpt.\n",
+      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 1000...\n",
+      "INFO:tensorflow:Loss for final step: 0.6493055.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow_estimator.python.estimator.canned.linear.LinearClassifier at 0x7fd3e8a134e0>"
+       "<tensorflow_estimator.python.estimator.canned.linear.LinearClassifierV2 at 0x7f0628022f28>"
       ]
      },
      "execution_count": 5,
@@ -652,7 +562,7 @@
    "source": [
     "#@title Create and train the classifier {display-mode: \"form\"}\n",
     "\n",
-    "num_steps = 5000  #@param {type: \"number\"}\n",
+    "num_steps = 1000  #@param {type: \"number\"}\n",
     "\n",
     "# Create a feature spec for the classifier\n",
     "feature_spec = create_feature_spec(df, features_and_labels)\n",
@@ -688,7 +598,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "873778ca99ea41dabc292633b2fd68cf",
+       "model_id": "00b76a15c68d45cea4cc4085156c0485",
        "version_major": 2,
        "version_minor": 0
       },
