--- a/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_mnist_example.ipynb
@@ -7,7 +7,7 @@
     "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.3.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -94,7 +94,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>94</td><td>application_1594231828166_0181</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0181/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0181_01_000001/demo__davit000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>13</td><td>application_1600264891477_0018</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1600264891477_0018/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1600264891477_0018_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -107,38 +107,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n",
-      "Finished Experiment \n",
-      "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0181_1', {'accuracy': 0.8125, 'log': 'Experiments/application_1594231828166_0181_1/chief_0_output.log'})"
+      "SparkSession available as 'spark'.\n"
      ]
     }
    ],
    "source": [
     "def multi_worker_mirrored_training():\n",
-    "\n",
     "    import sys\n",
-    "    \n",
     "    import numpy as np\n",
     "    import tensorflow as tf\n",
-    "    \n",
     "    from hops import tensorboard\n",
     "    from hops import devices\n",
     "    from hops import hdfs\n",
-    "    \n",
     "    import pydoop.hdfs as pydoop\n",
-    "\n",
     "    log_dir = tensorboard.logdir()\n",
-    "    \n",
     "    # Define distribution strategy\n",
-    "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy(communication=tf.distribute.experimental.CollectiveCommunication.NCCL)\n",
-    "\n",
+    "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy() #communication=tf.distribute.experimental.CollectiveCommunication.NCCL\n",
     "    # Define per device batch size\n",
-    "    batch_size_per_replica = 32\n",
-    "    \n",
-    "    # Define global batch size    \n",
+    "    batch_size_per_replica = 8\n",
+    "    # Define global batch size\n",
     "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
-    "    \n",
     "    # Define model hyper parameters\n",
     "    epochs = 10\n",
     "    steps_per_epoch = 5\n",
@@ -146,19 +134,14 @@
     "    kernel = 2\n",
     "    pool = 2\n",
     "    dropout = 0.01\n",
-    "\n",
     "    num_classes = 10\n",
-    "\n",
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
     "    input_shape = (28, 28, 1)\n",
-    "    \n",
     "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
     "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
-    "    \n",
     "    # Create an iterator over the dataset\n",
     "    def data_input(filenames, batch_size=128, shuffle=False, repeat=None):\n",
-    "\n",
     "        def parser(serialized_example):\n",
     "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
     "            features = tf.io.parse_single_example(\n",
@@ -169,33 +152,27 @@
     "                })\n",
     "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
     "            image.set_shape([28 * 28])\n",
-    "\n",
     "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
     "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
     "            label = tf.cast(features['label'], tf.int32)\n",
     "            # Reshape the tensor\n",
     "            image = tf.reshape(image, [img_rows, img_cols, 1])\n",
-    "    \n",
     "            # Create a one hot array for your labels\n",
     "            label = tf.one_hot(label, num_classes)\n",
-    "            \n",
     "            return image, label\n",
-    "\n",
     "        # Import MNIST data\n",
     "        dataset = tf.data.TFRecordDataset(filenames)\n",
-    "\n",
     "        # Map the parser over dataset, and batch results by up to batch_size\n",
     "        dataset = dataset.map(parser)\n",
     "        if shuffle:\n",
     "            dataset = dataset.shuffle(buffer_size=128)\n",
     "        dataset = dataset.batch(batch_size, drop_remainder=True)\n",
     "        dataset = dataset.repeat(repeat)\n",
-    "        return dataset\n",
-    "    \n",
-    "    \n",
+    "        options = tf.data.Options()\n",
+    "        options.experimental_distribute.auto_shard_policy = tf.data.experimental.AutoShardPolicy.OFF\n",
+    "        return dataset.with_options(options)\n",
     "    # construct model under distribution strategy scope\n",
     "    with strategy.scope():\n",
-    "        \n",
     "        model = tf.keras.Sequential()\n",
     "        model.add(tf.keras.layers.Conv2D(32, kernel_size=(kernel, kernel),\n",
     "                         activation='relu',\n",
@@ -207,36 +184,45 @@
     "        model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
     "        model.add(tf.keras.layers.Dropout(dropout))\n",
     "        model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
-    "\n",
     "        opt = tf.keras.optimizers.Adadelta(1.0)\n",
-    "\n",
     "        model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
     "                      optimizer=opt,\n",
     "                      metrics=['accuracy'])\n",
-    "        \n",
-    "        \n",
     "    callbacks = [\n",
     "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
     "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
     "    ]\n",
-    "    \n",
-    "    model.fit(data_input(train_filenames, batch_size), \n",
-    "        verbose=0, \n",
-    "        epochs=epochs, \n",
+    "    model.fit(data_input(train_filenames, batch_size),\n",
+    "        verbose=0,\n",
+    "        epochs=epochs,\n",
     "        steps_per_epoch=steps_per_epoch,\n",
     "        validation_data=data_input(validation_filenames, batch_size),\n",
-    "        validation_steps=validation_steps,      \n",
+    "        validation_steps=validation_steps,\n",
     "        callbacks=callbacks\n",
     "    )\n",
-    "    \n",
     "    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
-    "\n",
     "    metrics = {'accuracy': score[1]}\n",
-    "    \n",
-    "    return metrics    \n",
-    "\n",
+    "    return metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_deep_learning_admin000/Experiments/application_1600264891477_0018_1', {'accuracy': 0.5, 'log': 'Experiments/application_1600264891477_0018_1/chief_0_output.log'})"
+     ]
+    }
+   ],
+   "source": [
     "from hops import experiment\n",
-    "experiment.mirrored(multi_worker_mirrored_training, name='mnist model', local_logdir=True, metric_key='accuracy')"
+    "experiment.mirrored(multi_worker_mirrored_training, name='mnist model', metric_key='accuracy')"
    ]
   },
   {
