--- a/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
@@ -7,8 +7,8 @@
     "# Differential Evolution PyTorch mnist experiment\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with pytorch 1.4.0</h3></font>\n",
-    "<font color='red'> <h3>Tested with torchvision 0.5.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with PyTorch 1.6.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with torchvision 0.7.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
